<resources>
    <string name="app_name">Zawraa Pharma</string>
    <string name="map_api_key">AIzaSyDgWrkvQ8qLT_eu8e0CFzqmzeRvr96EmKU</string>
    <string name="field_req">Field required</string>
    <string name="notifications">Notifications</string>
    <string name="wait">Wait</string>
    <string name="secrt_code">Secret Code</string>
    <string name="login">Login</string>
    <string name="next">Next</string>
    <string name="ok">Ok</string>
    <string name="choose_language"><![CDATA[Choose <font color="#F61C00">Language</font>]]></string>
    <string name="Pay_the_bill">Pay the bill</string>
    <string name="Find_pharmacy_location">Find a pharmacy location</string>
    <string name="Debt_disclosure">Debt disclosure</string>
    <string name="Appointments">Appointments</string>
    <string name="search">Search</string>
    <string name="no_search_results">No search results</string>
    <string name="search_bill">Search for the name of the pharmacy - storekeeper or by the invoice number</string>
    <string name="retrieve_an_invoice">Retrieve an invoice</string>
    <string name="payment_date">Payment date</string>
    <string name="dept">Dept</string>
    <string name="inv">Inv.#</string>
    <string name="date">Date</string>
    <string name="remain">Remain</string>
    <string name="amount">Amount</string>
    <string name="total_amount">Total amount:</string>
    <string name="discount">Discount:</string>
    <string name="amount2">Amount:</string>
    <string name="notes">Notes:</string>
    <string name="back">Back</string>
    <string name="show">Show</string>
    <string name="search_by_invoice_number">Search by invoice number...</string>
    <string name="choose_company">Choose company</string>
    <string name="search_result">Search result</string>
    <string name="product">Product</string>
    <string name="retrieve_amount">Retrieve amount</string>
    <string name="select_date">Select Date</string>
    <string name="save">Save</string>
    <string name="select">Select</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="pharmacy_name">Pharmacy name</string>
    <string name="debt">Debt</string>
    <string name="user_not_found">User Not Found</string>
    <string name="failed">Failed</string>
    <string name="something">Check internet connection</string>
    <string name="logout">Logout</string>
    <string name="pharmacies">Pharmacies:</string>
    <string name="no_data_to_show">No data to show</string>
    <string name="suc">Success!</string>
    <string name="paid_amount_grater">Paid amount is grater than remaining amount</string>
    <string name="payment_receipt">Payment receipt</string>
    <string name="time">Time</string>
    <string name="receipt_num">Receipt num #</string>
    <string name="print">Print</string>
    <string name="delete">Delete</string>
    <string name="invoice_number">Invoice number</string>
    <string name="bill_num_inc">Bill number is incorrect</string>
    <string name="connect">Connect</string>
    <string name="scan">Scan</string>
    <string name="printers">Printers</string>
    <string name="open_bluetooth">Please open bluetooth</string>
    <string name="code">#code</string>
    <string name="refresh">Refresh</string>


    <string name="toast_1">Transaction print,use the AIDL mode!</string>
    <string name="toast_2">The service has been disconnected!</string>
    <string name="toast_3">Bluetooth device is unavailable</string>
    <string name="toast_4">Bluetooth device not detected. Please open Bluetooth!</string>
    <string name="toast_5">Not Found InnterPrinter!</string>
    <string name="toast_6">Bluetooth connect failed!</string>
    <string name="toast_7"> Only a single Qr code is printed for the AIDL mode</string>
    <string name="toast_8">Now QrCode size must be less than 7!</string>
    <string name="toast_9">BarCode type or conent error!</string>
    <string name="toast_10">Please set the printer as black label mode!</string>
    <string name="toast_11">Settings->System->Advanced->InnerPrinter-> set black mark function</string>
    <string name="toast_12">Please set the printer to label mode!</string>
    <string name="align_form">Align form</string>
    <string name="align_left">Align left</string>
    <string name="align_mid">middle</string>
    <string name="align_right">right</string>
    <string name="pic_pos">Picture position</string>
    <string name="pic_hor">transverse</string>
    <string name="pic_ver">vertical</string>

    <string name="pic_mode">picture printing method</string>
    <string name="pic_mode1">raster bitmap</string>
    <string name="pic_mode2">8 point single density</string>
    <string name="pic_mode3">8 point double density</string>
    <string name="pic_mode4">24 point single density</string>
    <string name="pic_mode5">24 point double density</string>
    <string name="style_width">times width</string>
    <string name="style_height">times height</string>
    <string name="retrieve_receipt">Retrieve receipt</string>
    <string name="delegate_name">Delegate name</string>
    <string name="amount3">Amount</string>
    <string name="up_data">Please update data first</string>
    <string name="sales">Sales</string>
    <string name="price">Price</string>
    <string name="bonus">Bonus</string>
    <string name="amount4">Amount</string>
    <string name="choose_client">choose client</string>
    <string name="user_blocked">User Blocked</string>
    <string name="newClient">New client</string>
    <string name="title">title</string>
    <string name="location">Location</string>
    <string name="send">Send</string>
    <string name="category">category</string>
    <string name="field_required">Field Required</string>


</resources>