<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="lang"
            type="String" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"

        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                app:layout_collapseMode="pin">

                <LinearLayout
                    android:id="@+id/llBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:rotation='@{lang.equals("ar")?180:0}'
                        android:src="@drawable/ic_left_arrow"
                        app:tint="@color/white"

                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:text="@string/back"
                        android:textColor="@color/white"
                        android:textSize="16sp" />
                </LinearLayout>
            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@drawable/account_line"
            android:dividerPadding="1dp"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:showDividers="middle|end|beginning">

            <LinearLayout
                android:id="@+id/pic_align"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/align_form"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pic_align_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:text="@string/align_left"
                    android:textColor="@color/white"
                    android:textSize="14sp"
                    tools:ignore="RtlCompat"

                    />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pic_orientation"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pic_pos"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pic_orientation_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:text="@string/pic_hor"
                    android:textColor="@color/white"
                    android:textSize="14sp"

                    />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pic_type"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/pic_mode"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/pic_type_info"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="end|center_vertical"
                    android:maxLines="2"
                    android:text="@string/pic_mode1"
                    android:textColor="@color/white"
                    android:textSize="14sp" />

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:rotation='@{lang.equals("ar")?180:0}'
                    android:src="@drawable/ic_arrow_right" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/pic_style"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:background="@color/white"
                android:gravity="center_vertical|center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_width"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/pic_width"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/style_height"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <CheckBox
                    android:id="@+id/pic_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/bitmap_imageview"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:scaleType="center" />

                <TextView
                    android:id="@+id/print"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_marginEnd="1dp"
                    android:layout_marginBottom="20dp"
                    android:background="@color/white"
                    android:gravity="center"
                    android:text="@string/print"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    tools:ignore="RtlCompat" />
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
</layout>
